plugins {
    id 'com.android.application'
    id 'com.mikepenz.aboutlibraries.plugin'
}

android {
    namespace 'com.j.rickroller'
    compileSdk 35

    defaultConfig {
        applicationId "io.github.dot166.rickroller"
        minSdk 24
        targetSdk 35
        versionCode 1
        versionName "3.0"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
        debug {
            applicationIdSuffix ".dev"
            versionNameSuffix "-PREVIEW"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

dependencies {
    implementation "io.github.dot166:j-Lib:3.3.3"
}